<resources>
    <string name="app_name">Safari</string>
    <string name="title_activity_login">Login</string>
    <string name="Email">Email</string>
    <string name="Pass">Password</string>
    <string name="Login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="Username">Email</string>
    <string name="FullName">FullName</string>
    <string name="Phone">Phone Number</string>
    <string name="Confrimation_pass">Confirmation Password</string>
    <string name="txtGuest">Guest</string>
    <string name="Field_empty">Fields con\'t be Empty</string>
    <string name="Aleady_a_member">Already a member?</string>
    <string name="Register">Register</string>
    <string name="Skip">Skip</string>
    <string name="connectWith">Connect With</string>
    <string name="Terms"><![CDATA[Terms & Conditon]]></string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="contact">Contact With</string>
    <string name="next">Next</string>
    <string name="title_activity_navigation__drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_YourAccount">Your Account</string>
    <string name="menu_BookMark">BookMark</string>
    <string name="menu_Event">Event</string>
    <string name="menu_AboutUS">About US</string>
    <string name="menu_LogOut">Log Out</string>
    <string name="Picture">Picture</string>
    <string name="Video">Video</string>
    <string name="ErrorFileVideo">This Folder has not contain a Video</string>
    <string name="ErrorFilePic">This Folder has not contain a Picture</string>
    <string name="OK">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="post">Add New Post</string>
    <string name="About_Us_Desc">Safari is a tourist application, works to stimulate tourism within Jordan and expand tourism activity by providing activities and events for tourists and awareness of places marginalized tourist in Jordan</string>
    <string name="CopyRight">Designed by Tafila Technical University students</string>
    <string name="Save">Save</string>
    <string name="Profile">Profile</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Privacy">Privacy</string>

    <string name="NotiFav">Liked your Post</string>

    <string name="NotiComment">Comment your Post</string>

    <string name="Notification">Notification</string>
    <string name="DontDistrub">Do not Distrub</string>
    <string name="General">General</string>
    <string name="Language">Language</string>
    <string name="Google_Places_Key">AIzaSyBi2SZsin1lPcKpyPYKvYLsoVN81Fx747A</string>
    <string name="facebook_app_id">226485184939883</string>

    <string name="fb_login_protocol_scheme">fb226485184939883</string>


    <string name="categories">Categories</string>

    <string name="PostCategories">Post with These Categories : </string>
    <string-array name="Categort">
        <item>Medical tourism</item>
        <item>Culture</item>
        <item>Entertainment</item>
        <item>Shopping</item>
        <item>Desert</item>
        <item>Beach</item>
        <item>Nature</item>
        <item>Arts</item>

    </string-array>
    <string-array name="NotificationSettings">
        <item>Events</item>
        <item>Comment</item>
        <item>Likes</item>

    </string-array>
    <string-array name="chip_Name">
        <item>Medical tourism</item>
        <item>Culture</item>
        <item>Entertainment</item>
        <item>Shopping</item>
        <item>Desert</item>
        <item>Beach</item>
        <item>Nature</item>
        <item>Arts</item>
    </string-array>


    <string-array name="selectedNotification">
        <item>Events</item>
        <item>Comment</item>
        <item>Likes</item>


    </string-array>
    <string name="SelectLang">Please Select One of these Language</string>
    <string name="ChangeLang">Are You sure to change Language ?</string>
    <string name="warningdialog">Warning dialog</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="NotificationSetting">Event , Comment and Like</string>

</resources>
