<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >
        <item  android:title="@string/menu_Event"
            android:id="@+id/nav_event"
            android:icon="@drawable/menu_event"
            />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/menu_bookmark"
            android:title="@string/menu_BookMark" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/menu_person"
            android:title="@string/menu_YourAccount" />
    </group>
    <group    android:checkableBehavior="none">
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/menu_aboutus"
            android:title="@string/menu_AboutUS" />

        <item

            android:id="@+id/nav_exit"
            android:icon="@drawable/menu_exit"
            android:title="@string/menu_LogOut"
            ></item>
    </group>



</menu>
