<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting_Account.Settings">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:scaleX="1.03"
        android:scrollX="-3dp"
        android:scrollY="6dp"
        android:src="@drawable/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pic_User_settings"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/menu_person"
                    android:textAlignment="center"
                    android:tint="#000000"
                    app:civ_border_color="#000000" />

                <TextView
                    android:id="@+id/txt_Username_Settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/mvboli"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:drawableStart="@drawable/menu_person"
                        android:fontFamily="@font/mvboli"
                        android:text="@string/Profile"
                        android:textSize="18sp" />

                    <View

                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/changeBackgroundColor" />

                    <TextView
                        android:id="@+id/txt_Edit_Profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:clickable="true"
                        android:fontFamily="@font/mvboli"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/EditProfile"
                        android:textSize="24sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:drawableStart="@drawable/ic_notifications_black"
                            android:fontFamily="@font/mvboli"
                            android:text="@string/Notification"
                            android:textSize="18sp" />

                        <View

                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/changeBackgroundColor" />

                        <LinearLayout
                            android:id="@+id/txt_notification_Settings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_Notification_Settings"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:fontFamily="@font/mvboli"
                                android:text="@string/action_settings"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="35dp"
                                android:layout_marginEnd="20dp"
                                android:fontFamily="@font/mvboli"
                                android:text="@string/NotificationSetting" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txt_dontdist"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="20dp"
                                android:fontFamily="@font/mvboli"
                                android:text="@string/DontDistrub"
                                android:textSize="24sp" />

                            <Switch
                                android:id="@+id/switch1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:drawableStart="@drawable/ic_public_black"
                            android:fontFamily="@font/mvboli"
                            android:text="@string/General"
                            android:textSize="18sp" />

                        <View

                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="20dp"
                            android:background="@color/changeBackgroundColor" />

                        <TextView
                            android:id="@+id/txt_Language_Settings"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="20dp"
                            android:drawableEnd="@drawable/jordan_flags"
                            android:clickable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:fontFamily="@font/mvboli"
                            android:text="@string/Language"
                            android:textSize="24sp" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>